log
Sun 30 Apr 2023 08:06:21 PM UTC: 
 tests:  0|5
total_score: 0/70
547bbc6
Sun 30 Apr 2023 08:16:27 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a8d8a3c
Sun 30 Apr 2023 08:21:39 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:26: error: subscripted value is neither array nor pointer nor vector
   57 |         printf("%d", n[i][j]);
      |                          ^
Compilation failed
db61771
Sun 30 Apr 2023 08:21:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d3ba289
Sun 30 Apr 2023 08:22:23 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
0932b89
Sun 30 Apr 2023 08:22:55 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
bc34b0b
Sun 30 Apr 2023 08:28:20 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
1e8b20e
Sun 30 Apr 2023 08:28:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:14: error: assignment to ‘List *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   57 |         list = copy(n);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
5d95eba
Sun 30 Apr 2023 08:28:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: invalid use of incomplete typedef ‘List’
   57 |         list->first = copy(n);
      |             ^~
Compilation failed
4811d57
Sun 30 Apr 2023 08:30:21 PM UTC: 
 sudoku.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:17: error: unused variable ‘j’ [-Werror=unused-variable]
   54 |     int i = 0 , j = 0;
      |                 ^
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i = 0 , j = 0;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
b3d8d65
Sun 30 Apr 2023 08:30:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a01f3c0
Sun 30 Apr 2023 08:54:32 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:26: error: comparison between pointer and integer [-Werror]
   57 |         if(n->sudo[i][j] == NULL)
      |                          ^~
cc1: all warnings being treated as errors
Compilation failed
a2b4b0e
Sun 30 Apr 2023 08:54:59 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:26: error: comparison between pointer and integer [-Werror]
   57 |         if(n->sudo[i][j] == NULL)
      |                          ^~
cc1: all warnings being treated as errors
Compilation failed
0ae9f0f
Sun 30 Apr 2023 08:57:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4888e89
Sun 30 Apr 2023 09:43:11 PM UTC: 
 sudoku.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ea847c3
Sun 30 Apr 2023 09:43:29 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
b972324
Sun 30 Apr 2023 09:43:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9cf4fe2
Sun 30 Apr 2023 09:43:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6214652
Sun 30 Apr 2023 09:44:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2d91143
Sun 30 Apr 2023 09:44:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2947aee
Sun 30 Apr 2023 09:44:44 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
c529106
Sun 30 Apr 2023 09:45:21 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
c9b7b21
Sun 30 Apr 2023 09:45:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
be7b9ea
Sun 30 Apr 2023 09:46:51 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
ce35b48
Sun 30 Apr 2023 09:47:58 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c5eec96
Sun 30 Apr 2023 09:48:39 PM UTC: 
 sudoku.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
ae6c71d
